# wolfPSA

./: .gitignore  CHANGELOG.md  Makefile  README.md  user_settings.h  wolfpsa.map
.github/scripts/: run-tests.sh
.github/workflows/: build-config-matrix.yml  psa-compliance.yml  test-psa-api.yml  wolfcrypt-benchmark.yml  wolfssl-psa-client-server.yml  zephyr-4.x.yml
build-test/: build-variant.sh  user_settings.h
src/: misc_impl.c  psa_aead.c  psa_aead_internal.h  psa_api_stub.c  psa_asymmetric.c  psa_asymmetric_api.c  psa_attestation.c  psa_chacha20_poly1305.c  psa_cipher.c  psa_crypto.c  psa_ecc.c  psa_ed25519_ed448.c  psa_engine.c  psa_hash_engine.c  psa_kem.c  psa_key_derivation.c  psa_key_storage.c  psa_key_wrap.c  psa_lms_xmss.c  psa_lock.h  psa_mac.c  psa_mldsa.c  psa_mlkem.c  psa_montgomery.c  psa_pq.c  psa_pqc_internal.h  psa_random.c  psa_rsa.c  psa_size.h  psa_store_posix.c  psa_store_zephyr.c  psa_tls_prf.c  psa_trace.h  psa_xof.c
test/: Makefile  README.md  run_psa_tls_server_client.sh
test-psa-api/: README.md  psa-arch-tests_ec_overflow.patch  psa-crypto-tests.sh
test-psa-api/tgt_dev_apis_wolfpsa/: README.md
test/psa_server/: psa_14_misc_test.c  psa_api_test.c  psa_api_test_user_settings.h  psa_ascon_xchacha_test.c  psa_crypto_init_test.c  psa_des3_stack_scrub_test.c  psa_ecc_bit_inference_test.c  psa_ecc_curve_id_test.c  psa_key_wrap_test.c  psa_lms_xmss_verify_test.c  psa_mldsa_test.c  psa_mlkem_test.c  psa_random_size_test.c  psa_rsa_pss_interop_test.c  psa_sign_context_test.c  psa_sp800_108_test.c  psa_tls_server.c  psa_xof_test.c  user_settings.h
test/wolfcrypt-benchmark/: Makefile  README.md  main.c  user_settings.h
wolfpsa/: psa_chacha20_poly1305.h  psa_engine.h  psa_key_storage.h  psa_random.h  psa_store.h  psa_stream.h  psa_tls_prf.h
wolfpsa/psa/: crypto-pqc.h  crypto.h  crypto_compat.h  crypto_config.h  crypto_sizes.h  (+5 more)
zephyr/: CMakeLists.txt  Kconfig  README.md  module.yml  user_settings_example.h  zephyr_init.c
zephyr/tests/psa_consumer/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr/tests/psa_its/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr/tests/psa_persistent_key/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr/tests/psa_secure_storage/: CMakeLists.txt  prj.conf  testcase.yaml
(+32 files in other folders)
